force-app/main/default/objects/Feedback__c/fields/Completed_Service_one_Visit__c.field-meta.xml
<CustomField>
    <fullName>Completed_Service_one_Visit__c</fullName>
    <inlineHelpText>Our technician completed your service request in one visit.</inlineHelpText>
    <label>Completed Service one Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>