force-app/main/default/objects/Feedback__c/fields/Easy_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Easy_to_Contact__c</fullName>
    <inlineHelpText>It was easy to contact us and you spoke to the correct person first time.we handled your initial call professionally.</inlineHelpText>
    <label>Easy to Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>