force-app/main/default/objects/Feedback__c/fields/Mechanic_Available__c.field-meta.xml
<CustomField>
    <fullName>Mechanic_Available__c</fullName>
    <inlineHelpText>A mechanic was available and your call was responded to in an acceptable timeframe.</inlineHelpText>
    <label>Mechanic Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>