force-app/main/default/objects/Feedback__c/fields/Parts_Availability__c.field-meta.xml
<CustomField>
    <fullName>Parts_Availability__c</fullName>
    <inlineHelpText>You were satisfied with the availability of parts needed to complete your requested service or repair.</inlineHelpText>
    <label>Parts Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>