force-app/main/default/objects/Feedback__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <inlineHelpText>The service and expertise we offered was value for money and you were happy with our payment terms.</inlineHelpText>
    <label>Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>