force-app/main/default/objects/Feedback__c/fields/Product_Support__c.field-meta.xml
<CustomField>
    <fullName>Product_Support__c</fullName>
    <inlineHelpText>The overall product support experience we gave you was better than other service providers.</inlineHelpText>
    <label>Product Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>