force-app/main/default/objects/Feedback__c/fields/Repair_or_service__c.field-meta.xml
<CustomField>
    <fullName>Repair_or_service__c</fullName>
    <inlineHelpText>The repair or service you requested was carried out correctly and you are satisfied with quality of our workmanship.</inlineHelpText>
    <label>Repair or service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>