force-app/main/default/objects/Feedback__c/fields/Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Service_Report__c</fullName>
    <inlineHelpText>You received a clear explanation of the problem or scope of work required. A quality service report was issued after the job was completed.</inlineHelpText>
    <label>Service Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>