force-app/main/default/objects/Feedback__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>