force-app/main/default/objects/Feedback__c/fields/showFeedBackCMP__c.field-meta.xml
<CustomField>
    <fullName>showFeedBackCMP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>showFeedBackCMP</label>
    <type>Checkbox</type>
</CustomField>