force-app/main/default/objects/Feedback__c/fields/Technician_knowladge__c.field-meta.xml
<CustomField>
    <fullName>Technician_knowladge__c</fullName>
    <inlineHelpText>You had confidence in our technicians knowladge and his ability to service or repair your engine.</inlineHelpText>
    <label>Technician knowladge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>