force-app/main/default/objects/Feedback__c/fields/Technician_Manner_Attitude__c.field-meta.xml
<CustomField>
    <fullName>Technician_Manner_Attitude__c</fullName>
    <inlineHelpText>Our technician communicated effectively and their attitude and manner was professional throughout the visit.</inlineHelpText>
    <label>Technician Manner/Attitude</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>