force-app/main/default/objects/Feedback__c/fields/User_Public_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Public_IP_Address__c</fullName>
    <label>User Public IP Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>